# LEEWAH-BACK-END-API

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
.claude/commands/: check.md  new-migration.md  new-model.md  new-route.md  review.md
.claude/memory/: MEMORY.md  (+2 more)
learning-notes/: 00-index.md  01-gitignore.md  02-toml-and-rust-toolchain.md  03-env-files.md  04-docker.md  05-postgresql-vs-redis.md  06-config-rs.md  06-error-rs.md  07-config-rs.md  08-db-rs.md  09-migrations.md  10-session-summary.md
migrations/: 0001_create_users.sql  0002_create_auth_tables.sql  0003_create_children.sql  0004_create_schools.sql  0005_create_payment_plans.sql
questions/: 01-why-toml-not-plain-text.md  02-what-happens-without-docker-volume.md  03-host-path-vs-named-volume.md  06-what-is-cicd.md  07-why-github-workflows-folder.md  08-what-is-async-and-why-web-server.md  09-what-is-result-and-unwrap.md  10-why-is-port-u16-not-string.md  12-what-is-a-connection-pool.md  13-why-unified-error-type.md  15-how-do-handlers-access-shared-data.md  16-why-does-axum-state-need-clone.md  17-why-types-before-migrations.md  18-why-migrations-not-raw-sql.md  19-why-store-token-hash-not-token.md  20-what-is-a-checksum.md  21-why-soft-delete.md  22-why-full-text-search-index.md  23-what-is-generated-always-as.md  warn-vs-deny.md  what-does-a-linter-do.md  why-is-yaml-strict-about-indentation.md  why-notefound-holds-string-but-unauthorized-doesnt.md
resume/: nde_simoni_che_backend_rust.md
src/: config.rs  db.rs  error.rs  main.rs  state.rs  types.rs
(+1 files in other folders)
